# orq-arena

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  REFACTOR_PLAN.md  mkdocs.yml  newbattles.json  newbattles.report.html  newbattles.run.json  orc_arena.yaml  orq_arena.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
.planning/plans/: 2026-07-12-human-anchor.md
configs/: README.md  budget_8.yaml  byok_openrouter.yaml  frontier_16.yaml  frontier_8.yaml  reasoning_arena.yaml
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  getting-started.md  index.md  methodology.md  testing.md
docs/stylesheets/: extra.css
examples/quickstart/: README.md  battles.jsonl  battles.report.html  battles.run.json  config.yaml
fixtures/: demo_tournament.json
outputs/html/: orc-arena-architecture-report.html  orc-arena-final-grade.html  orc-arena-refactor-report.html  orc-arena-state-of-the-project.html  orc-arena-vs-chennai-report.html
overrides/: main.html
prompts/: starter.jsonl
scripts/: capture_docs_media.py  demo.tape  record_demo_gif.py  record_fixture.py
src/orc_arena/: __init__.py  cli.py  config.py  events.py  headless.py  rejudge.py
src/orc_arena/arena/: battle.py  damage.py
src/orc_arena/data/: log.py  prompts.py  schemas.py
src/orc_arena/judges/: panel.py  prompts.py  schemas.py
src/orc_arena/orcs/: roster.py
src/orc_arena/providers/: orq_gateway.py
src/orc_arena/tournament/: bracket.py  driver.py  elo.py  swiss.py
src/orc_arena/tui/: app.py  theme.py
src/orc_arena/tui/screens/: battle_browser.py  bracket.py  cta_modal.py  fight.py  leaderboard.py  roster_select.py  title.py
src/orc_arena/tui/widgets/: judge_card.py  response_panel.py  warrior_card.py
src/orq_arena/: __init__.py  anchor.py  candidates.py  cli.py  config.py  events.py  headless.py  preflight.py  rejudge.py  report.py  roster.py
src/orq_arena/analysis/: kappa.py  postmortem.py
src/orq_arena/arena/: battle.py  damage.py
src/orq_arena/data/: log.py  prompts.py  schemas.py
src/orq_arena/orcs/: roster.py
src/orq_arena/providers/: models_list.py  orq_gateway.py
src/orq_arena/tournament/: driver.py  elo.py  swiss.py
src/orq_arena/tui/: app.py  hp.py  theme.py
src/orq_arena/tui/screens/: battle_browser.py  cta_modal.py  fight.py  leaderboard.py  postmortem.py  roster_select.py  title.py
src/orq_arena/tui/widgets/: judge_card.py  model_card.py  prompt_panel.py  response_panel.py  warrior_card.py
tests/: test_anchor_cli.py  test_anchor_items.py  test_anchor_math.py  test_anchor_page.py  test_anchor_serve.py  test_battle_rounds.py  test_bracket.py  test_browser_render.py  test_cli_errors.py  test_cli_tui_optional.py  test_config.py  test_damage.py  test_driver.py  test_elo.py  test_fight_render.py  test_fixture_replay.py  test_gateway_resolution.py  test_gateway_streaming.py  test_headless_display.py  test_hp_tracker.py  test_kappa.py  test_leaderboard_render.py  test_panel_tally.py  test_preflight_cost.py  test_prompts.py  test_rejudge_compare.py  test_report.py  test_roster_picker.py  test_run_plan_screen.py  test_scheduler.py  test_swiss.py
