[project]
name = "orq-arena"
version = "0.1.0"
description = "LLM arena benchmark: models battle in a terminal arena, an evaluatorq pairwise jury judges, and a Bradley-Terry ELO ranking comes out; every token flows through the orq.ai router gateway."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arian Pasquali" }]
keywords = ["llm", "benchmark", "evaluation", "elo", "llm-as-judge", "orq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "textual>=0.83",
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openai>=1.50",
    "httpx>=0.27",
    # pairwise jury (llm_jury_pairwise landed in 1.3.x)
    "evaluatorq>=1.8.0",
    "orq-ai-sdk>=4.11.7",
    # imported directly (cli.py, headless.py); do not ride on transitive deps
    "loguru>=0.7",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/orq-ai/orq-arena"
Repository = "https://github.com/orq-ai/orq-arena"
"Orq Router Docs" = "https://docs.orq.ai/docs/ai-gateway"
"evaluatorq" = "https://github.com/orq-ai/evaluatorq"

[project.scripts]
orq-arena = "orq_arena.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orq_arena"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.6",
]

