[project]
name = "orq-arena"
version = "0.1.0"
description = "LLM arena benchmark: models battle in a terminal arena, an evaluatorq pairwise jury judges, and a Bradley-Terry ELO ranking comes out; every token flows through the orq.ai router gateway."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arian Pasquali" }]
keywords = ["llm", "benchmark", "evaluation", "elo", "llm-as-judge", "orq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openai>=1.50",
    "httpx>=0.27",
    # pairwise jury (llm_jury_pairwise landed in 1.3.x)
    "evaluatorq>=1.8.0",
    "orq-ai-sdk>=4.11.7",
    # imported directly (cli.py, headless.py); do not ride on transitive deps
    "loguru>=0.7",
    "rich>=13.7",
]

[project.optional-dependencies]
# The live TUI show (orq-arena run --tui). The benchmark, report, and
# rejudge work without it.
tui = ["textual>=0.83"]

[project.urls]
Homepage = "https://github.com/orq-ai/orq-arena"
Repository = "https://github.com/orq-ai/orq-arena"
"Orq Router Docs" = "https://docs.orq.ai/docs/ai-gateway"
"evaluatorq" = "https://github.com/orq-ai/evaluatorq"

[project.scripts]
orq-arena = "orq_arena.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orq_arena"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "I",  # import sorting
    "B",  # bugbear
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.10"
files = ["src/orq_arena"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-llmstxt>=0.5.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # TUI render tests need textual directly; don't ride on textual-dev's pin.
    "textual>=0.83",
    "textual-dev>=1.6",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

